# cedar-py

./: .gitignore  Cargo.toml  README.md  justfile  pyproject.toml
.github/workflows/: build-wheels.yml
docs/: BUILDING_WHEELS.md
examples/: basic_usage.py  comprehensive_example.py  copy_example.py  rbac_example.py  template_example.py
python/cedar_py/: __init__.py  _cedar_py.pyi
scripts/: build-wheels.sh
src/: context_utils.rs  decision.rs  entity_store.rs  lib.rs  policy_set.rs  policy_template.rs  request.rs  schema.rs
tests/: test_cedar_py.py
